--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -24,6 +24,8 @@ android {
 }
 
 dependencies {
+    implementation project(":domain")
+    implementation project(":data")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
