--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,6 +10,13 @@ dependencies {
 
     // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Mockk
+    testImplementation "io.mockk:mockk:1.10.0"
+
+    // JUnit 4
+    testImplementation 'junit:junit:4.12'
+
 }
 
 sourceCompatibility = "1.7"
