--- a/data/build.gradle
+++ b/data/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     // RxKotlin
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    // MockWebServers
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.7.2"
 }
